--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^1.1.2
   permission_handler: ^11.4.0
   path: ^1.8.3
+  flutter_bloc: ^9.1.0
 
 dev_dependencies:
   flutter_test:
